[package]
name = "canela-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
rusqlite = "0.31.0"
serde = {version= "1.0.203",  features = ["derive"]}
tokio = {version = "1", features = ["full"]}
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
warp = "0.3.7"
