[package]
name = "canela-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
clap = { version = "4.5.6", features = ["derive"] }
rusqlite = "0.31.0"
serde = {version= "1.0.203",  features = ["derive"]}
tokio = {version = "1", features = ["full","io-util"]}
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
warp = "0.3.7"
tokio-tungstenite = "*"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
jwt-simple = "0.12"
chrono = "0.4.38"
lazy_static = "1.4.0"

[dependencies.tungstenite]
version = "0.23.0"
default-features = false
